--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.11",
-    "langchain": "^0.0.92",
+    "langchain": "^0.0.213",
     "lucide-react": "^0.263.0",
-    "next": "13.4.11",
+    "next": "^13.5.6",
     "next-cloudinary": "^4.16.0",
     "next-themes": "^0.2.1",
-    "openai": "^3.3.0",
+    "openai": "^4.24.1",
     "openai-edge": "^1.2.2",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.32",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
